# HW2_9

./: README.md  authors.json  pyproject.toml  requirements.txt
hw2_9/: finder.py  load_from_json.py  main.py  models.py
