[tool.poetry]
name = "hw2-9"
version = "0.1.0"
description = ""
authors = ["ZhovtenkoA <127408550+ZhovtenkoA@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "hw2_9"}]

[tool.poetry.dependencies]
python = "^3.10"
scrapy = "^2.10.1"
pymongo = "^4.5.0"
mongoengine = "^0.27.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
